--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open",
+    "start": "node server.js",
     "build": "webpack --config webpack.config.js"
   },
   "author": "",
@@ -21,5 +21,8 @@
     "p5": "^1.0.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
+  },
+  "engines": {
+    "node": "13.1.x"
   }
 }
