--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "webpack-dev-server --open",
     "build": "webpack --config webpack.config.js"
   },
   "author": "",
@@ -16,6 +16,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@material/textfield": "^5.1.0",
     "@polymer/paper-swatch-picker": "^3.0.1",
     "express": "^4.17.1",
     "p5": "^1.0.0",
